--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ango",
   "version": "1.0.0",
-  "description": "暗号作成",
+  "description": "暗号を作成して、Twitterに投稿しよう！",
   "author": "Newburu",
   "private": true,
   "scripts": {
@@ -11,12 +11,17 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "nuxt": "^2.3.4",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "bootstrap": "^4.1.3"
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "nodemon": "^1.18.9"
   }
 }
